--- a/main.css
+++ b/main.css
@@ -5,4 +5,9 @@ img {
 }
 .taskbar {
 	position: fixed
+	list-style-type: none;
+    	margin: 0;
+    	padding: 0;
+	display: block;
+   	width: 60px;
 }
