--- a/main.css
+++ b/main.css
@@ -3,13 +3,13 @@ img {
 	width: 20px;
 	length: 20px;
 }
-.taskbar {
-	display: block;
-   	width: 60px;
-}
-#taskbar_items {
-	position: fixed
-	list-style-type: none;
-    	margin: 0;
-    	padding: 0;
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 60px;
+} 
+
+li a {
+    display: block;
 }
