--- a/main.css
+++ b/main.css
@@ -3,13 +3,20 @@ img {
 	width: 20px;
 	length: 20px;
 }
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    width: 60px;
-} 
-
-li a {
-    display: block;
+#taskbar_items {
+  	width: 100%; /* Full-width */
+    	background-color: #555; /* Dark-grey background */
+    	overflow: auto; /* Overflow due to float */
+}
+#taskbar_items a {
+    	float: left; /* Float links side by side */
+    	text-align: center; /* Center-align text */
+    	width: 20%; /* Equal width (5 icons with 20% width each = 100%) */
+    	padding: 12px 0; /* Some top and bottom padding */
+    	transition: all 0.3s ease; /* Add transition for hover effects */
+    	color: white; /* White text color */
+    	font-size: 36px; /* Increased font size */
+}
+#taskbar_items a:hover {
+	background-color: #000;
 }
