--- a/main.css
+++ b/main.css
@@ -7,6 +7,5 @@ img {
   	width: 50%; /* Full-width */
 	height: 10px;
     	background-color: #555; /* Dark-grey background */
-	color: #000;
-	position: sticky;
+	color: rgb(0,128,0);
 }
