--- a/main.css
+++ b/main.css
@@ -9,3 +9,29 @@ img {
     	background-color: #555; /* Dark-grey background */
 	color: rgb(0,128,0);
 }
+#taskbar_items {
+    background-color: #333;
+    overflow: hidden;
+}
+
+/* Style the links inside the navigation bar */
+#taskbar_items a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+/* Change the color of links on hover */
+#taskbar_items a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+/* Add a color to the active/current link */
+#taskbar_items a.active {
+    background-color: #4CAF50;
+    color: white;
+}
