--- a/main.css
+++ b/main.css
@@ -17,6 +17,7 @@ img {
     padding: 14px 16px;
     text-decoration: none;
     font-size: 17px;
+    position: fixed;
 }
 
 /* Change the color of links on hover */
